# ai-soc-platform

./: .env.example  .gitignore  CODEBASE_GUIDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: README.md  app.py  index.html
docker/: README.md
docs/: 00-overview.md  01-architecture.md  02-roadmap.md  03-design-decisions.md  EVALUATION.md  SOC_Tutorial.md  VM_DEPLOYMENT_GUIDE.md
notebooks/: README.md
scripts/: README.md  collection-startup.cmd  copilot_compare.py  copilot_demo.py  coverage_report.py  evaluate.py  load_mordor_data.py  move-repos-out-of-onedrive.ps1  register-pipeline-task.ps1  restore-collection.ps1  retrain_from_feedback.py  run-atomic.ps1  run-pipeline-loop.ps1  run_art_tests.ps1  run_pipeline.py  scorecard.py  seed_alerts.py  self_learning_pipeline.py  setup-host-lab.ps1  setup-vm-target.ps1  train_model.py  update_threat_intel.py
simulations/: README.md  labels.csv
src/aisoc/: __init__.py  config.py  pipeline.py
src/aisoc/api/: __init__.py  main.py  stats.py  store.py
src/aisoc/copilot/: __init__.py  analyst.py  llm.py  prompts.py  report.py  (+1 more)
tests/: test_alert_fusion.py  test_api.py  test_auth_features.py  test_baseline.py  test_context.py  test_copilot.py  test_coverage_report.py  test_detection.py  test_evaluate.py  test_image_load_features.py  test_integration.py  test_mordor_adapter.py  test_network_features.py  test_process_access_features.py  test_process_features.py  test_process_history.py  test_registry_features.py  test_retrain_feedback.py  test_schemas.py  test_store.py
(+22 files in other folders)
